Fix jump in page on nav open/close

--- a/css/style.css
+++ b/css/style.css
@@ -37,19 +37,27 @@ body {
 
 .overlay {
   position: fixed;
-  display: none;
+  /* display: none; */
+  display: block;
   width: 100%;
   height: 100%;
   top: 0;
-  left: 0;
+  right: -1000px;
+  /* left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 0; */
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
 }
 
 .overlay-show {
-  display: block;
+  /* display: block; */
+}
+
+@media (min-width: 600px) {
+  .overlay {
+    display: none;
+  }
 }
 
 /**** Layout ****/
@@ -115,13 +123,14 @@ nav {
 }
 
 nav ul {
-  position: absolute;
+  /* position: absolute; */
+  position: fixed;
   right: 0;
   top: 0;
   height: 100vh;
   width: 50%;
   transform: translateX(100%);
-  z-index: 1;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -130,7 +139,6 @@ nav ul {
   padding-top: 9rem;
   padding-left: 2rem;
   box-shadow: 0px 2px 4px #f3f3f3;
-  transition: 0.25s;
 }
 
 nav ul li {
@@ -142,6 +150,12 @@ nav ul li:hover {
   color: var(--primary-orange);
 }
 
+.icon-wrapper {
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+
 #menu-icon {
   display: block;
   cursor: pointer;
@@ -151,7 +165,7 @@ nav ul li:hover {
 
 .nav-show {
   transform: translateX(0%);
-  transition: transform 0.25s ease-in;
+  transition: transform 0.25s;
   z-index: 5;
 }
 
